--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,10 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-report-plugin</artifactId>
 						<version>2.20.1</version>
+						<configuration>
+                        				<argLine>-Xmx2048m -Xms1024m -XX:MaxPermSize=512m -XX:-UseGCOverheadLimit</argLine>
+                        				<forkMode>always</forkMode>
+                    				</configuration>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
